--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,10 +3,60 @@
     <head>
         <title>TS_LESS_CSS</title>
 
+        <meta charset="UTF-8">      
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;700;800&family=Raleway:wght@200;400;500&display=swap" rel="stylesheet">  
-        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link href="../CSS/style.css" rel="stylesheet" type="text/css">
+        <link href="../CSS/style_nav.css" rel="stylesheet" type="text/css">
+        <link href="../CSS/style_content.css" rel="stylesheet" type="text/css">
+        <link href="../CSS/style_footer.css" rel="stylesheet" type="text/css">
+
 
     </head>
+    <body>
+                                    <!--                                GÓRAAA                                -->
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+        <nav class="top_panel">
+            <div class="menu_top" style="max-width: 1400px;">
+                <div class="menu_top_logo">
 
+                </div>
+                <div class="menu_top_content">
+                    <div class="menu_top_content-list">
+
+                    </div>
+                    <div class="menu_top_content-smth"
+                </div>
+            </div>
+        </nav>
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+                                    <!--                                WNĘTRZEEE                             -->
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+        <div class="content">
+            <div class="content_box" style="max-width: 1400px;">
+                <div class="content_top">
+
+                </div>
+        </div>
+
+        </div>
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+                                    <!--                                STOPAA                                -->
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+        <footer class="stopka">
+            <div class="mmstupka" style="max-width: 1400px;">
+                <div class="info">
+                    
+                </div>
+                <div class="contact">
+
+                </div>
+            </div>
+        </footer>
+                                    <!--    //////////////////////////////////////////////////////////////    -->
+    </body>
 
 </html>
